# ros_training_ex4

./: README.md  moveit2_env_setup.sh
cam_launch_pkg/: package.xml  setup.cfg  setup.py
cam_launch_pkg/config/config/: img.yaml
cam_launch_pkg/launch/: cam.launch.py
moveit_exercise/: CMakeLists.txt  package.xml
moveit_exercise/launch/: moveit_collision_client.launch.py
moveit_exercise/src/: moveit_test_node.cpp
ros2_aruco/ros2_aruco/: setup.py
ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
ros2_aruco_interfaces/: CMakeLists.txt
ros2_aruco_interfaces/srv/: SpawnCollisionObject.srv
